Attempted fix on ios background color rotate issue in light mode - attempt 2.

--- a/styles.css
+++ b/styles.css
@@ -379,8 +379,10 @@ ul li ul:focus {
 
 html[data-theme='light'] {
     filter: invert(1) hue-rotate(180deg);
+    -webkit-filter: invert(1) hue-rotate(180deg);
 }
 
 html[data-theme='light'] .dont-invert {
     filter: invert(1) hue-rotate(180deg);
+    -webkit-filter: invert(1) hue-rotate(180deg);
   }
